# Terrain

./: .gitmodules  CMakeLists.txt  README.md  RoadMap.md  TODO.md
Installers/Linux/deployment/: DebianPackaging.sh
Installers/Mac/: Notarize.sh  Sign.sh  Terrain.pkgproj  preinstall_au.sh  preinstall_vst3.sh
Installers/Windows/: Installer.nsi
Presets/: Basic.xml  ButterFly.xml  Echo.xml  Fire.xml  MPE-Basic.xml  MPE-ButterFly.xml  MPE-Echo.xml  MPE-Fire.xml  MPE-Space.xml  PatternRun.xml  Plunky.xml  Space.xml
Source/: DefaultTreeGenerator.h  Identifiers.h  MainEditor.cpp  MainEditor.h  MainProcessor.cpp  MainProcessor.h  Parameters.h  StateHelpers.h
Source/DSP/: ADSR.h  DataTypes.h  MPEVoice.h  StandardVoice.h  Terrain.h  Trajectory.h  VoiceInterface.h  WaveTerrainSynthesizer.h  WaveTerrainSynthesizerMPE.h  WaveTerrainSynthesizerStandard.h
Source/Interface/: AttachedInterfaces.h  CenterConsole.h  ControlPanel.h  GlobalTimer.h  Header.h  LookAndFeel.h  Panel.h  ParameterSlider.h  PopUpWindow.h  RoutingCurve.h  SettingsComponent.h  TerrainPanel.h  TrajectoryPanel.h  ValueTreeView.h  VisualiserPanel.h  Visualizer.h  VoicesMeter.h
Source/Interface/Renderer/: Attributes.h  Camera.h  Terrain.h  Trajectories.h  glUtility.h
Source/Interface/Renderer/Shaders/: Terrain.frag  Terrain.vert  TrajectoryPoint.frag  TrajectoryPoint.vert
Source/Utility/: DefaultTreeGenerator.h  EphemeralState.h  Identifiers.h  PresetManager.h  Presets.h  VersionType.h
glm_module/: glm.hpp  glm_module.cpp  glm_module.hpp
